Refactored and added documentation
Added KDoc and Javadoc comments to classes, methods, and composables.
Refactored code for clarity and consistency.
Extracted `EditWeight` and `GoalText` into their own composable files.
Replaced `LazyColumn` in `HomeScreen` and `LogScreen` with `WeightLogList` composable.
Removed unused code and added TODOs for future implementation.